Implement language context and dynamic language switching logic

--- a/frontend/src/screens/locales/en.json
+++ b/frontend/src/screens/locales/en.json
@@ -1,4 +1,5 @@
 {
   "welcome": "Welcome",
-  "select_language": "Select Language"
+  "select_language": "Select Language",
+   "languages": "Languages"
 }
