adding translation to ar and en json files

--- a/frontend/src/screens/locales/ar.json
+++ b/frontend/src/screens/locales/ar.json
@@ -2,5 +2,28 @@
 {
   "welcome": "أهلاً بك",
   "select_language": "اختر اللغة",
-   "languages": "اللغات"
+   "languages": "اللغات",
+    "language_english": "الإنجليزية",
+  "language_arabic": "العربية",
+    "how_to_use": "كيفية الاستخدام",
+  "help_and_support": "المساعدة والدعم",
+  "privacy_policy": "سياسة الخصوصية",
+    "settings": "الإعدادات",
+     "light_mode": "الوضع الفاتح",
+  "dark_mode": "الوضع الداكن",
+  "your_reviews": "تقييماتك",
+  "joined_in": "انضم في {{year}}",
+   "profile": "الملف الشخصي",
+    "edit_profile": "تعديل الملف الشخصي",
+  "name": "الاسم",
+  "about_you": "نبذة عنك",
+  "save": "  حفظ",
+  "edit": "تعديل",
+    "step1": "📱 افتح التطبيق وأنشئ حسابك أو قم بتسجيل الدخول.",
+  "step2": "🧭 استخدم علامات التبويب السفلية للتنقل بسهولة بين الميزات.",
+  "step3": "🔍 ابحث عن أماكن لاستكشاف مواقع جديدة.",
+  "step4": "⭐ اضغط على المكان لعرض التفاصيل وحفظه في المفضلة.",
+  "step5": "🌗 قم بالتبديل بين الوضع الداكن والوضع الفاتح في الإعدادات.",
+  "step6": "💬 تواصل مع الدعم للحصول على المساعدة من صفحة الإعدادات."
+  
 }
