adding more translation to the arabic and english json file

--- a/frontend/src/screens/locales/ar.json
+++ b/frontend/src/screens/locales/ar.json
@@ -24,6 +24,35 @@
   "step3": "🔍 ابحث عن أماكن لاستكشاف مواقع جديدة.",
   "step4": "⭐ اضغط على المكان لعرض التفاصيل وحفظه في المفضلة.",
   "step5": "🌗 قم بالتبديل بين الوضع الداكن والوضع الفاتح في الإعدادات.",
-  "step6": "💬 تواصل مع الدعم للحصول على المساعدة من صفحة الإعدادات."
+  "step6": "💬 تواصل مع الدعم للحصول على المساعدة من صفحة الإعدادات.",
+   "contact_support_message": "اكتب رسالتك أدناه واضغط إرسال للتواصل مع فريق الدعم.",
+     "send": "إرسال",
+      "intro": "نحن نحترم خصوصيتك ونلتزم بحماية بياناتك الشخصية. توضح سياسة الخصوصية هذه كيف نقوم بجمع معلوماتك واستخدامها وحمايتها عند استخدامك لتطبيقنا.",
+    "section1": "١. المعلومات التي نقوم بجمعها",
+    "text1": "قد نقوم بجمع معلومات شخصية مثل اسمك، عنوان بريدك الإلكتروني، وبيانات الاستخدام عند تسجيلك أو تفاعلك مع التطبيق.",
+    "section2": "٢. كيف نستخدم معلوماتك",
+    "text2": "تساعدنا معلوماتك في تقديم خدماتنا وتحسينها وتخصيصها، والرد على طلباتك، وإرسال التحديثات المهمة.",
+    "section3": "٣. مشاركة البيانات والأمان",
+    "text3": "نحن لا نبيع أو نؤجر بياناتك الشخصية. قد نشارك المعلومات مع مزودي خدمات موثوقين يساعدوننا في تشغيل التطبيق. نقوم بتنفيذ تدابير أمان معقولة لحماية بياناتك.",
+    "section4": "٤. اختياراتك",
+    "text4": "يمكنك إدارة معلوماتك الشخصية وتفضيلات التواصل من خلال إعدادات التطبيق. كما يمكنك الاتصال بنا لطلب حذف بياناتك.",
+    "section5": "٥. خصوصية الأطفال",
+    "text5": "تطبيقنا غير مخصص للأطفال دون سن ١٣ عامًا. نحن لا نجمع بيانات من الأطفال عمدًا دون موافقة الوالدين.",
+    "section6": "٦. التغييرات على هذه السياسة",
+    "text6": "قد نقوم بتحديث سياسة الخصوصية هذه بشكل دوري. نوصي بمراجعتها بانتظام لأي تغييرات.",
+    "section7": "٧. اتصل بنا",
+    "text7": "إذا كانت لديك أي أسئلة أو استفسارات بخصوص هذه السياسة، يرجى الاتصال بنا عبر support@example.com.",
+      "findYourDestination": "اكتشف وجهتك",
+  "touristicPlaces": "أماكن سياحية",
+  "religiousPlaces": "أماكن دينية",
+  "restaurants": "مطاعم",
+  "activity": "أنشطة",
+  "hotels": "فنادق",
+    "nearby": "بالقرب منك",
+  "popularFoods": "أطعمة شائعة",
+  "popularPlaces": "أماكن مشهورة",
+   "NearBy": "بالقرب منك",
+  "PopularFoods": "أطعمة شائعة",
+  "PopularPlaces": "أماكن مشهورة"
   
 }
