--- a/frontend/src/screens/locales/en.json
+++ b/frontend/src/screens/locales/en.json
@@ -23,6 +23,35 @@
   "step3": "🔍 Search for places to explore new locations.",
   "step4": "⭐ Tap on a place to view details and save it to favorites.",
   "step5": "🌗 Switch between dark and light mode in Settings.",
-  "step6": "💬 Contact support for help from the Settings page."
+  "step6": "💬 Contact support for help from the Settings page.",
+   "contact_support_message": "Write your message below and tap Send to contact our support team.",
+    "send": "Send",
+     "intro": "We respect your privacy and are committed to protecting your personal data. This privacy policy explains how we collect, use, and safeguard your information when you use our app.",
+    "section1": "1. Information We Collect",
+    "text1": "We may collect personal information such as your name, email address, and usage data when you register or interact with the app.",
+    "section2": "2. How We Use Your Information",
+    "text2": "Your information helps us provide, improve, and personalize our services, respond to your requests, and send important updates.",
+    "section3": "3. Data Sharing and Security",
+    "text3": "We do not sell or rent your personal data. We may share information with trusted service providers who assist us in operating the app. We implement reasonable security measures to protect your data.",
+    "section4": "4. Your Choices",
+    "text4": "You can manage your personal information and communication preferences within the app settings. You can also contact us to request deletion of your data.",
+    "section5": "5. Childrens Privacy",
+    "text5": "Our app is not intended for children under 13 years old. We do not knowingly collect data from children without parental consent.",
+    "section6": "6. Changes to This Policy",
+    "text6": "We may update this privacy policy periodically. We encourage you to review it regularly for any changes.",
+    "section7": "7. Contact Us",
+    "text7": "If you have any questions or concerns about this policy, please contact us at support@example.com.",
+      "findYourDestination": "Find Your Destination",
+  "touristicPlaces": "Touristic Places",
+  "religiousPlaces": "Religious Places",
+  "restaurants": "Restaurants",
+  "activity": "Activity",
+  "hotels": "Hotels",
+    "nearby": "Nearby",
+  "popularFoods": "Popular Foods",
+  "popularPlaces": "Popular Places",
+    "NearBy": "Nearby",
+  "PopularFoods": "Popular Foods",
+  "PopularPlaces": "Popular Places"
 
 }
