--- a/frontend/src/screens/locales/en.json
+++ b/frontend/src/screens/locales/en.json
@@ -64,7 +64,25 @@
        "AIIntroMessage": "Hello! I'm your AI guide for Lebanon. I can tell you about tourist places, religious sites, restaurants, and food in Lebanon. What would you like to know?",
        "AskAboutLebanon": "Ask me about Lebanon...",
        "ShopsAndSouvenirs": "Shops & Souvenirs",
-        "PopularLebaneseDishes": "Popular Lebanese Dishes"
+        "PopularLebaneseDishes": "Popular Lebanese Dishes",
+          "Description": "Description",
+  "AddToFavourite": "Add To Favourite",
+  "RatingAndReview": "Rating & Review",
+   "ViewOnMap": "View on map",
+    "UsersReviews": "Users Reviews",
+      "LoadMoreReviews": "Load More Reviews",
+        "YouAlsoVisited": "You also visited this place? Write your review",
+         "HowWouldYouRateYourExperience": "How would you rate your experience?",
+           "WriteYourReview": "Write your review...",
+            "CharactersLimit": "/200 characters",
+              "UploadPhotoOptional": "Upload a photo (Optional)",
+                "Save": "Save",
+  "Submit": "Submit",
+  "Upload": "Upload",
+    "Visit Us": "Visit Us"
+  
+
+
  
 
 }
