adding translation to fav and visited pages

--- a/frontend/src/screens/locales/ar.json
+++ b/frontend/src/screens/locales/ar.json
@@ -80,7 +80,10 @@
                   "Save": "حفظ",
   "Submit": "إرسال",
   "Upload": "تحميل",
-    "Visit Us": "زورونا"
+    "Visit Us": "زورونا",
+      "goToVisited": "اذهب إلى الأماكن التي تمت زيارتها",
+        "noFavourites": "لم يتم إضافة أي مفضلة بعد.",
+          "visited": "تمت الزيارة"
 
 
 
