Fixing the scroll view of the review  cards  and adding a bin so thhe user can delete his own review(a modal will popup wen its clicked asking the user if he is sure about deleting the review

--- a/frontend/src/screens/locales/ar.json
+++ b/frontend/src/screens/locales/ar.json
@@ -83,7 +83,10 @@
     "Visit Us": "زورونا",
       "goToVisited": "اذهب إلى الأماكن التي تمت زيارتها",
         "noFavourites": "لم يتم إضافة أي مفضلة بعد.",
-          "visited": "تمت الزيارة"
+          "visited": "تمت الزيارة",
+            "deleteReviewConfirmation": "هل أنت متأكد أنك تريد حذف مراجعتك؟",
+  "no": "لا",
+  "yes": "نعم"
 
 
 
