adding join as guest logic

--- a/frontend/src/screens/locales/ar.json
+++ b/frontend/src/screens/locales/ar.json
@@ -103,7 +103,13 @@
            "edit_favorite": "تعديل المفضلة",
   "move_to_visited": "نقل إلى تمت الزيارة",
   "delete": "حذف",
-  "city": "المدينة"
+  "city": "المدينة",
+  "logout": "تسجيل الخروج",
+      "cancel": "إلغاء",
+    "login": "تسجيل الدخول",
+    "signup": "إنشاء حساب",
+      "login_required": "تسجيل الدخول مطلوب",
+    "login_message": "يجب أن تكون مسجلاً للدخول لتعديل ملفك الشخصي. هل ترغب في إنشاء حساب؟"
 
 
 
