adding labels to text input and adjusting the fav page for guests

--- a/frontend/src/screens/locales/ar.json
+++ b/frontend/src/screens/locales/ar.json
@@ -109,7 +109,9 @@
     "login": "تسجيل الدخول",
     "signup": "إنشاء حساب",
       "login_required": "تسجيل الدخول مطلوب",
-    "login_message": "يجب أن تكون مسجلاً للدخول لتعديل ملفك الشخصي. هل ترغب في إنشاء حساب؟"
+    "login_message": "يجب أن تكون مسجلاً للدخول لتعديل ملفك الشخصي. هل ترغب في إنشاء حساب؟",
+      "SuggestedPlaces": "أماكن مقترحة"
+      
 
 
 
