--- a/frontend/src/screens/locales/en.json
+++ b/frontend/src/screens/locales/en.json
@@ -108,7 +108,10 @@
       "cancel": "Cancel",
     "login": "Login",
     "signup": "Sign Up",
-     "login_required": "Login Required"
+     "login_required": "Login Required",
+     "SuggestedPlaces": "Suggested Places",
+     "login_message": "You must be logged in to edit your profile. Would you like to create an account?"
+
 
   
 
