adding trip option box

--- a/frontend/src/screens/locales/ar.json
+++ b/frontend/src/screens/locales/ar.json
@@ -110,7 +110,8 @@
     "signup": "إنشاء حساب",
       "login_required": "تسجيل الدخول مطلوب",
     "login_message": "يجب أن تكون مسجلاً للدخول لتعديل ملفك الشخصي. هل ترغب في إنشاء حساب؟",
-      "SuggestedPlaces": "أماكن مقترحة"
+      "SuggestedPlaces": "أماكن مقترحة",
+        "trip": "رحلة"
       
 
 
