--- a/frontend/src/screens/locales/en.json
+++ b/frontend/src/screens/locales/en.json
@@ -48,6 +48,7 @@
   "activity": "Activity",
   "hotels": "Hotels",
     "nearby": "Nearby",
+    "trip":"Trip",
   "popularFoods": "Popular Foods",
   "popularPlaces": "Popular Places",
     "NearBy": "Nearby",
